css/style.css
body {
  font-family: sans-serif;
  background-color: #dbc4dd;
  color: rgb(0, 0, 0);
  font-size: 16px;
  line-height: 20px;
  padding: 0;
  margin: 0;
}

a {
  color: rgb(0, 119, 255);
}

.header {
  width: 100%;
  height: auto;
  padding: 2%;
  margin: 0%;
  background-color: #333;
  color: #ffffff;
  text-align: center;
  top: 0;
  position: -webkit-sticky;
  position: sticky;
}

.latestProjects {
  display: grid;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.sectionHeader {
  text-align: center;
  align-items: center;
  justify-content: center;
  padding-top: 25px;
}

.summary {
  padding-top: 10px;
  margin-left: 30px;
  margin-right: 30px;
}

.skills {
  padding: 30px;
  margin-right: 30px;
  margin-left: 30px;
  column-count: 2;
}

.resources {
  text-align: center;
}

.resources li {
  padding: 30px;
  float: none;
  display: inline-block;
  text-align: center;
  list-style: none;
  font-weight: 400;
}

footer {
  position: relative;
  bottom: 0;
  width: 100%;
  text-align: center;
  background-color: #dbc4dd;
}

.divider {
  position: relative;
  height: 1px;
}

.div-transparent:before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  right: 5%;
  width: 90%;
  height: 1px;
  background-image: linear-gradient(to right, transparent, rgb(48, 49, 51), transparent);
}

.experience {
  margin-left: 30px;
  margin-right: 30px;
}

.education {
  margin-left: 30px;
  margin-right: 30px;
}

.hobbies {
  margin-left: 30px;
  margin-right: 30px;
}

.navigationBar {
  width: 100%;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  text-align: center;
}

.navigationBar a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.navigationBar a:hover {
  color: #111;
}

.navigationBar a:active {
  color: rgb(0, 119, 255);
}

.navigationBar li {
  float: left;
}

.navigationBar ul {
  top: 0;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  position: -webkit-sticky;
  position: sticky;
  background-color: #333;
}

